Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,14 +16,7 @@ stages:
         steps:
           - script: dotnet build 'Project 0/Project 0.csproj'
       - job: "test"
+        dependson: "build"
         steps:
           - script: dotnet test 'Xunittest/Xunittest.csproj'
 
-#steps:
-#- script: echo Hello, world!
-#  displayName: 'Run a one-line script'
-
-#- script: |
-#    echo Add other tasks to build, test, and deploy your project.
-#    echo See https://aka.ms/yaml
-#  displayName: 'Run a multi-line script'
