--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # Starter pipeline
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'AzureDevOpsSonarCloud'
+    organization: 'asrailuna'
+    scannerMode: 'MSBuild'
+    projectKey: 'asrailuna'
+    projectName: 'Project0'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
