--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,4 @@
 # Starter pipeline
-- task: SonarCloudPrepare@1
-  inputs:
-    SonarCloud: 'AzureDevOpsSonarCloud'
-    organization: 'asrailuna'
-    scannerMode: 'MSBuild'
-    projectKey: 'asrailuna'
-    projectName: 'Project0'
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
@@ -26,5 +15,17 @@ stages:
         dependsOn: "build"
         steps:
           - script: dotnet test 'Xunittest/Xunittest.csproj'
+  - stage: "Publish"
+    jobs:
+      - job: "Publish"
+        steps:
+          - task: SonarCloudPrepare@1
+            inputs:
+              SonarCloud: 'AzureDevOpsSonarCloud'
+              organization: 'asrailuna'
+              scannerMode: CLI
+              configMode: file
+              projectKey: 'asrailuna'
+              projectName: 'Project0'
 
 
