--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ stages:
           - script: dotnet test 'Xunittest/Xunittest.csproj'
       - job: "Prepare"
         steps:
+          - script: dotnet build 'Project 0/Project 0.sln'
           - task: SonarCloudPrepare@1
             inputs:
               SonarCloud: 'AzureDevOpsSonarCloud'
