--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,9 @@ stages:
             inputs:
               SonarCloud: 'AzureDevOpsSonarCloud'
               organization: 'asrailuna'
-              scannerMode: 'CLI'
-              configMode: 'file'
+              scannerMode: 'MSBuild'
+              projectKey: 'sonar.asrailuna'
+              projectName: 'SonarTesting'
           - task: SonarCloudAnalyze@1
         
 
